--- a/Contact.html
+++ b/Contact.html
@@ -26,6 +26,14 @@
                     <input type="text" name="fname"><br><br>
                     <label>Last name:</label>
                     <input type="text"  name="lname"><br><br>
+                    <label>Age:</label>
+                    <input type="number" placeholder="Enter Your Age"><br><br>
+                    <label for="Country">Country:</label>
+                     <input type="country" placeholder="Enter your Country"> <br><br>
+                    <label>Male:</label>
+                    <input type="checkbox" name="male" id=" male"> <br><br>
+                    <label>Female:</label>
+                    <input type="checkbox" name="" id=""> <br><br>
                     <input type="submit" value="Submit">
                   </form>
             </td>
@@ -33,5 +41,13 @@
 
 
     </nav>
+    <nav>
+        <p>For more imformation, you can kindly visit My Facebook Page  !!!!</p>
+        <a href="https://web.facebook.com/photo/?fbid=147777201044863&set=a.112155194607064">@ Connie L. Yeeson</a>
+        <link rel="stylesheet" href="https://web.facebook.com/photo/?fbid=147777201044863&set=a.112155194607064">
+        
+
+    </nav>
+   
 </body>
 </html>
