--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             </ul>
         </nav>
          <nav style="margin-left: 550px;">
+            <h2>Short story About Myself</h2>
             <p>I was born september 18,2002,at the ELWA Hospital. <br> 
                 Both My parents are alive,  I have five sisters; no brother. 
                 <br>I first started my schooling at Mother  <br> of Jesus Christ Catholic high school, 
