--- a/Gallery.html
+++ b/Gallery.html
@@ -7,13 +7,38 @@
     <title>Document</title>
 </head>
 <body bgcolor="pink">
+         <h1 style="color: rgb(83, 162, 5);"
+        >FUN TIME !!!!!!</h1>
     <ul>
+
         <li><a href="./index.html">Home</a></li>
 
     </ul>
     <ul>
         <li><a href="./Contact.html">Contact</a></li>
-
+        
     </ul>
+    <table border="1">
+        <td>
+            <img src="./262356739_120071953815388_8118129149722807661_n.jpg" alt="" style="width: 250px;">
+            <img src="./255097674_112168717939045_4930442096335274087_n.jpg" alt="" style="width: 250px;">
+            <img src="./259488242_117712177384699_5693351433836391932_n.jpg" alt="" style="width: 250px;">
+            <img src="./264465064_122073626948554_8932227965441894327_n.jpg" alt="" style="width: 250px;">
+            <img src="./273605887_139583028530947_2818747122839428915_n (1).jpg" alt="" style="width: 250px;">
+
+
+        </td>
+    </table>
+    <table border="1">
+        <td>
+            <img src="./262356739_120071953815388_8118129149722807661_n.jpg" alt="" style="width: 250px;">
+            <!-- <img src="./255097674_112168717939045_4930442096335274087_n.jpg" alt="">
+            <img src="./259488242_117712177384699_5693351433836391932_n.jpg" alt="">
+            <img src="./264465064_122073626948554_8932227965441894327_n.jpg" alt="">
+            <img src="./273605887_139583028530947_2818747122839428915_n (1).jpg" alt=""> -->
+
+
+        </td>
+    </table>
 </body>
 </html>
