--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 
     
-    <body bgcolor="pink" background="./264465064_122073626948554_8932227965441894327_n.jpg">
-        <h1 style="color: rgb(83, 162, 5);">Welcome To My Pofortlio Page</h1> 
+    <body bgcolor="pink">
+        <h1>Welcome To My Pofortlio Page</h1> 
         <nav>
             <ul>
                 <li><a href="./Contact.html">Contact</a></li>
@@ -17,7 +17,8 @@
 
             </ul>
         </nav>
-         <nav style="margin-left: 550px;">
+            <img src="./264465064_122073626948554_8932227965441894327_n.jpg" width="250px">
+         <nav>
             <h2>Short story About Myself</h2>
             <p>I was born september 18,2002,at the ELWA Hospital. <br> 
                 Both My parents are alive,  I have five sisters; no brother. 
@@ -27,7 +28,7 @@
                 <br>Currently, I'm undergoing an eighteen month training at KIT. <br>
             </p>
          </nav>
-         <nav style="margin-left: 850px;">
+         <nav>
             <h2>Things that I love Doing</h2>
             <ul>
                 <li>Coding</li>
@@ -37,6 +38,7 @@
 
 
             </ul>
+
 
          </nav>
         <h2></h2>
